2005-01-17  Christian Stimming <stimming@tuhh.de>

	* src/lib/algorithms.h, algorithms.cc: Implement some slight
	performance improvements because Michael Plugge showed how much
	faster you can get. Probably the loading of the datafile should be
	optimized as well, but currently isn't.

	* src/lib/methods.cc: Fix method 56 after hint from Michael Plugge
	<m.plugge@fh-mannheim.de> and the test numbers in his konto_check
	package.

2005-01-16  Christian Stimming  <stimming@tuhh.de>

	* src/lib/ktoblzcheck.cc, src/lib/methods.cc: Modified lookup of
	code for method from the original "giant if-statement" to a
	std::map hash table of callback functions. However, this sped up
	the number checking only by roughly 15%, so it probably wasn't
	worth the effort :-(

2005-01-11  Christian Stimming <stimming@tuhh.de>

	* src/lib/ktoblzcheck.cc: Fix for method 11 by Erik Kerger

2005-01-02  Christian Stimming  <stimming@tuhh.de>

	* src/lib/ktoblzcheck.cc: New methods by Jens Gecius
	<jens@gecius.de>. He also discovered a fundamental problem with
	algo02, but didn't have time so far to fix it.

2004-11-10  Christian Stimming  <stimming@tuhh.de>

	* configure.in: Released version 1.2

	* src/bankdata/bankdata.txt: Updated, now valid from 2004-12-04
	onwards.

2004-09-10   Christian Stimming <stimming@tuhh.de>

	* src/include/ktoblzcheck.h, src/lib/accnum.cc: Improve
	documentation. Add C wrapper for copy constructor of
	AccountNumberCheck::Record class.
	
	* src/lib/Makefile.am: Increase SO_VERSION and SO_AGE because a
	function has been added.

2004-09-08   Christian Stimming <stimming@tuhh.de>

	* configure.in: Released version 1.1

	* src/lib/algorithms.cc (accnum_getRegKey): Add function to
	retrieve installation path from windows registry.

	* ktoblzcheck.iss.in: Add setup file for Inno Setup compiler.

2004-08-23  Christian Stimming  <stimming@tuhh.de>

	* src/lib/algorithms.cc: Another fix for algo 53/54 by Erik Kerger
	<erik@kedo.com>.
